# godot-korkscript

./: CMakeLists.txt  KorkScript.cpp  KorkScript.h  KorkScriptLanguage.cpp  KorkScriptLanguage.h  KorkScriptResourceFormat.cpp  KorkScriptResourceFormat.h  KorkScriptVMHost.cpp  KorkScriptVMHost.h  KorkScriptVMNode.cpp  KorkScriptVMNode.h  README.md  gdextension_entry.cpp  register_types.cpp  register_types.h
addons/korkscript/: korkscript.gdextension
